--- a/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Trainee/Views/Home/index.cshtml
@@ -1,16 +1,24 @@
+
+@model iTrainee.Models.UserAudit;
 @{
-	ViewData["Title"] = "Trainee";
+    ViewData["Title"] = "Trainee";
 }
-<div class="row">
+
+<div class="row mt-3">
+    
+        
     <div class="col">
-<p>Date : 26-04-2022</p>
+       
+<p>Date : @Model.Date</p>
 </div>
 <div class="col">
    
-<p>Sign-In :</p>
+<p>Sign-In : @Model.SignIn</p>
 </div>
-<p>Sign-Out :</p>
+<p>Sign-Out : @Model.SignOut</p>
+ 
 </div>
+       
 
 <p>Hello Kaviya R,</p>
 <div class="col">
@@ -20,17 +28,6 @@
   <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 </div>
-  @*  <div class="progress mx-auto" data-value='80'>
-          <span class="progress-left">
-                        <span class="progress-bar border-primary"></span>
-          </span>
-          <span class="progress-right">
-                        <span class="progress-bar border-primary"></span>
-          </span>
-          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-            <div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
-          </div>
-        </div>*@
           <div class="row">
     <p>C# Advanced</p>
     <div class="progress" style="width: 75%">
@@ -48,34 +45,4 @@
     <p>Web Api Application</p>
 </div>
 
-        <!-- Progress bar 1 -->
-        
-      @*  
-        <script>
-            $(function () {
-
-    $(".progress").each(function () {
-
-        var value = $(this).attr('data-value');
-        var left = $(this).find('.progress-left .progress-bar');
-        var right = $(this).find('.progress-right .progress-bar');
-
-        if (value > 0) {
-            if (value <= 50) {
-                right.css('transform', 'rotate(' + percentageToDegrees(value) + 'deg)')
-            } else {
-                right.css('transform', 'rotate(180deg)')
-                left.css('transform', 'rotate(' + percentageToDegrees(value - 50) + 'deg)')
-            }
-        }
-
-    })
-
-    function percentageToDegrees(percentage) {
-
-        return percentage / 100 * 360
-
-    }
-
-});
-        </script>*@
+      
