--- a/iTrainee.MVC/Areas/Shared/Views/UserTopics/AddEditUserTopics.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/UserTopics/AddEditUserTopics.cshtml
@@ -1,65 +1,148 @@
-﻿@model iTrainee.Models.UserTopics;
+﻿@model List<iTrainee.Models.Topics>;
 @using Microsoft.AspNetCore.Mvc.Rendering;
 
-
+<head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
 @{
 	ViewData["Title"] = "AddEditUSerTopics";
 }
-<h3 class="mt-5 mb-4">Save Batch</h3>
+<h3 class="mt-5 mb-4">Assign Topics & SubTopics</h3>
 
-@using (Html.BeginForm())
-{
-	    @Html.AntiForgeryToken()
-	<div class="form-group">
-		<label class="col-form-label">Trainees</label><br />
-		@Html.ListBoxFor(model=>model.SelectedTraineeList, new MultiSelectList(Model.TraineeList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectTrainee", @class = "form-control", multiple="multiple" })
-	</div>
+    @*<div class="panel panel-primary">  
+        <div class="panel-heading panel-head">Author Book Tree View</div>  
+        <div id="frm-author" class="panel-body">  
+@using (Html.BeginForm())  
+{  
+  
+            <div class="tree">  
+                @foreach (var topic in Model)
+                {
+                    <p>Topic : </p>
+                    <tr>
+                    <td>@Html.CheckBoxFor(m => topic.IsActive)</td>   
+                    <label>@Html.DisplayFor(m => topic.Name)</label>  
+                    </tr><br />                    <p>SubTopic : </p>
 
-	<div class="form-group">
-		<label class="col-form-label">Topics</label><br />
-		@Html.ListBoxFor(model=>model.SelectedTopicsList ,new MultiSelectList(Model.TopicsList, "Id", "Name"),  htmlAttributes: new { id="multiSelectTopics", @class = "form-control", multiple="multiple" })
-	</div>
+                    @foreach (var subTopics in topic.SubTopicsList)
+                    {
+                                            <tr>
+                    <td>@Html.CheckBoxFor(m => subTopics.IsActive)</td>   
+                    <label>@Html.DisplayFor(m => subTopics.Name)</label>  
+                    </tr>
+                    }          
+                }
+  
+            </div>  
+            <div class="form-group">  
+                <div class="col-lg-9"></div>  
+                <div class="col-lg-3">  
+                    <button class="btn btn-success" id="btnSubmit" type="submit">  
+Submit  
+</button>  
+                </div>  
+            </div>  
+}  
+  
+        </div>  
+    </div>  *@
 
-	<div class="form-group">
-		<label class="col-form-label">SubTopicss</label><br />
-		@Html.ListBoxFor(model=>model.SelectedSubTopicsList ,new SelectList(Model.SubTopicsList, "Id", "Name"),  htmlAttributes: new { id="multiSelectSubTopics", @class = "form-control", multiple="multiple" })
-	</div>
-	<input type="submit" class="mt-3 btn btn-primary" value="Save" />
-}
-
-
-
-<div class="container-fluid">
-        <div class="row">
-            <button id="btnSave" class="btn btn-default">Save Checked Nodes</button>
+    <ul class="treeview">
+    <li id="li_1" class="contains-items">
+        <div class="checkbox">
+            <input id="1" type="checkbox" value="1" name="categories[]">
+            <label for="1">
+                Floor
+            </label>
         </div>
-        <div class="row">
-            <div id="tree"></div>
+        <ul >
+            <li class="li_1">
+                <div class="checkbox">
+                    <input id="4" type="checkbox" value="4" name="categories[]">
+                    <label for="4">
+                        1st Floor
+                    </label>
+                </div>
+            </li>
+            <li class="li_1">
+                <div class="checkbox">
+                    <input id="5" type="checkbox" value="5" name="categories[]">
+                    <label for="5">
+                        2nd Floor
+                    </label>
+                </div>
+            </li>
+            <li class="li_1">
+                <div class="checkbox">
+                    <input id="6" type="checkbox" value="6" name="categories[]">
+                    <label for="6">
+                        3rd Floor
+                    </label>
+                </div>
+            </li>
+        </ul>
+    </li>
+    <li id="li_2">
+        <div class="checkbox">
+            <input id="2" type="checkbox" value="2" name="categories[]">
+            <label for="2">
+                Rent
+            </label>
         </div>
-    </div>
+    </li>
+    <li id="li_3" class="contains-items">
+        <div class="checkbox">
+            <input id="3" type="checkbox" value="3" name="categories[]">
+            <label for="3">
+                View
+            </label>
+        </div>
+        <ul>
+            <li class="li_3">
+                <div class="checkbox">
+                    <input id="7" type="checkbox" value="7" name="categories[]">
+                    <label for="7">
+                        Pool View
+                    </label>
+                </div>
+            </li>
+            <li class="li_3">
+                <div class="checkbox">
+                    <input id="8" type="checkbox" value="8" name="categories[]">
+                    <label for="8">
+                        Mountain View
+                    </label>
+                </div>
+            </li>
+            <li class="li_3">
+                <div class="checkbox">
+                    <input id="9" type="checkbox" value="9" name="categories[]">
+                    <label for="9">
+                        Courtyard
+                    </label>
+                </div>
+            </li>
+        </ul>
+    </li>
 
-@section scripts{
-    <script type="text/javascript">
+    <script>
+        $('input[type=checkbox]').change(function(){
+    // if is checked
+    if(this.checked){
+        // check all children
+        var lenchk = $(this).closest('ul').find(':checkbox');
+        var lenchkChecked = $(this).closest('ul').find(':checkbox:checked');
 
-        $(function(){
-		$("#multiSelectTrainee").chosen();
-		$("#multiSelectTopics").chosen();
-		$("#multiSelectSubTopics").chosen();
-	});
-            $(document).ready(function () {
-                var tree = $('#tree').tree({
-                    primaryKey: 'id',
-                    uiLibrary: 'bootstrap4',
-                    dataSource: '/Locations/Get',
-                    checkboxes: true
-                });
-                $('#btnSave').on('click', function () {
-                    var checkedIds = tree.getCheckedNodes();
-                    $.ajax({ url: '/Locations/SaveCheckedNodes', data: { checkedIds: checkedIds }, method: 'POST' })
-                        .fail(function () {
-                            alert('Failed to save.');
-                        });
-                });
-            });
+        //if all siblings are checked, check its parent checkbox
+        if (lenchk.length == lenchkChecked.length) {
+            $(this).closest('ul').siblings().find(':checkbox').prop('checked', true);
+        }else{
+            $(this).closest('.checkbox').siblings().find(':checkbox').prop('checked', true);
+        }
+    } else {
+        // uncheck all children
+        $(this).closest('.checkbox').siblings().find(':checkbox').prop('checked', false);
+        $(this).closest('ul').siblings().find(':checkbox').prop('checked', false);
+    }
+});
     </script>
-}
