--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
@@ -23,21 +23,21 @@
     }
 
     /*    #chat2 .form-control {
-                                    border-color: transparent;
-                                }
-
-                                    #chat2 .form-control:focus {
                                         border-color: transparent;
-                                        box-shadow: inset 0px 0px 0px 1px transparent;
                                     }
 
-                                .divider:after,
-                                .divider:before {
-                                    content: "";
-                                    flex: 1;
-                                    height: 1px;
-                                    background: #eee;
-                                }*/
+                                        #chat2 .form-control:focus {
+                                            border-color: transparent;
+                                            box-shadow: inset 0px 0px 0px 1px transparent;
+                                        }
+
+                                    .divider:after,
+                                    .divider:before {
+                                        content: "";
+                                        flex: 1;
+                                        height: 1px;
+                                        background: #eee;
+                                    }*/
 </style>
 <div class="container py-5">
 
@@ -62,19 +62,22 @@
                     </div>
                     count++;
                 }
-                
-                <div class="d-flex flex-row justify-content-end mb-4 pt-1">
-                    <div>
-                        <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">@Html.DisplayFor(modelItem => item.Comments)</p>
-                        <p class="small me-3 mb-3 rounded-3 text-muted d-flex justify-content-end">@Html.DisplayFor(modelItem => item.Receiver)</p>
+
+                @if (item.Comments != "")
+                {
+                    <div class="d-flex flex-row justify-content-end mb-4 pt-1">
+                        <div>
+                            <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">@Html.DisplayFor(modelItem => item.Comments)</p>
+                            <p class="small me-3 mb-3 rounded-3 text-muted d-flex justify-content-end">@Html.DisplayFor(modelItem => item.Receiver)</p>
+                        </div>
                     </div>
-                </div>
+                }
 
                 @* <div class="divider d-flex align-items-center mb-4">
                     <p class="text-center mx-3 mb-0" style="color: #a2aab7;">Today</p>
                     </div>*@
 
-                
+
             }
         </div>
         @* </div>
