--- a/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
@@ -1,15 +1,28 @@
 ﻿@model iTrainee.Models.Batch;
 @using Microsoft.AspNetCore.Mvc.Rendering;
 
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+<style>
+	#hidden{
+		display: none;
+	}
+
+	#show{
+		display:block;
+	}
+</style>
+
 @{
 	ViewData["Title"] = "AddEditBatch";
 }
 <h3 class="mt-5 mb-4">Save Batch</h3>
 
-@using (Html.BeginForm())
-{
+<form id="batchForm">
 	@Html.AntiForgeryToken()
 	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
 	<div class="form-group">
 		<label class="col-form-label">Name</label>
 		@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -18,14 +31,14 @@
 
 	<div class="form-group">
 		<label class="col-form-label">Mentors</label><br />
-		@Html.ListBoxFor(model=>model.SelectedMentorIds, new MultiSelectList(Model.MentorList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectMentor", @class = "form-control", multiple="multiple" })
-		@Html.ValidationMessageFor(model => model.SelectedMentorIds, "", new { @class = "text-danger" })
+		@Html.DropDownListFor(model=>model.SelectedMentorIds, new MultiSelectList(Model.MentorList, "Id", "UserName"),  htmlAttributes: new { id="SelectedMentorIds", @class = "form-control", multiple="multiple" })
+		<label id="mentorError">Please select atleast one mentor</label>
 	</div>
 
 	<div class="form-group">
 		<label class="col-form-label">Trainees</label><br />
 		@Html.ListBoxFor(model=>model.SelectedTraineeIds ,new MultiSelectList(Model.TraineeList, "Id", "UserName"),  htmlAttributes: new { id="multiSelectTrainee", @class = "form-control", multiple="multiple" })
-		@Html.ValidationMessageFor(model => model.SelectedTraineeIds, "", new { @class = "text-danger" })
+		@Html.ValidationMessageFor(model=>model.SelectedTraineeIds, "", new { @class = "text-danger" })
 	</div>
 
 	<div class="form-group">
@@ -33,16 +46,35 @@
 		@Html.ListBoxFor(model=>model.SelectedStreamIds ,new SelectList(Model.StreamList, "Id", "Name"),  htmlAttributes: new { id="multiSelectStream", @class = "form-control", multiple="multiple" })
 		@Html.ValidationMessageFor(model => model.SelectedStreamIds, "", new { @class = "text-danger" })
 	</div>
-	<input type="submit" class="mt-3 btn btn-primary" value="Save" />
-}
+	<input type="submit" id="batchSubmitBtn" class="mt-3 btn btn-primary" value="Save" />
+</form>
 
 @section scripts{
-<script>
+
+<script type="text/javascript">
 	$(function(){
-		$("#multiSelectMentor").chosen();
-		$("#multiSelectTrainee").chosen();
-		$("#multiSelectStream").chosen();
+		$("#multiSelectTrainee").chosen({
+			placeholder_text_multiple: "Select minimum one trainee"
+		});
+		$("#multiSelectStream").chosen({
+			placeholder_text_multiple: "Select minimum one stream"
+		});  
+        $("#SelectedMentorIds").chosen({
+            placeholder_text_multiple: "Select minimum one mentor"
+        });
 	});
+
+
+	$(function(){
+    $("#batchSubmitBtn").click(function () {
+		debugger;
+         var count = $("#SelectedMentorIds option:selected").length;
+         if(count == 0){
+             document.getElementById('mentorError').style.color = red;
+             return false;
+         }
+    });
+});
 
 </script>
 
