--- a/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
@@ -1,16 +1,22 @@
 ﻿@model iTrainee.Models.Stream
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 <div class="row">
 	<div class="col-lg-12">
-		<form id="streamForm">
-			<div class="form-group">
-				<label class="col-form-label">Name</label>
-				<input type="text" class="form-control" name="Name" value="@Model.Name" />
-			</div>
+@using (Html.BeginForm())
+{
+			    @Html.AntiForgeryToken()
+				@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+				<div class="form-group">
+					<label class="col-form-label">Name</label>
+					@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+					@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+				</div>
 			<div class="form-group mt-4 float-right">
-				<input id="btnStreamSave" type="submit" value="Save" class="btn btn-primary mr-3" />
+				<input type="submit" value="Save" class="btn btn-primary mr-3" />
 			</div>
-		</form>
+}
 	</div>
 </div>
 
@@ -21,25 +27,4 @@
 }
 }
 
-<script>
 
-		$(document).ready(function () {
-
-		$("#btnStreamSave").click(function () {
-			debugger;
-			var updatedStreamData = $("#streamForm").serialize();
-			$.ajax({
-				type: "POST",
-				url: "/Shared/Stream/AddEditStream",
-				data: updatedStreamData,
-				success: function () {
-					$("#streamModal").modal("hide");
-					window.location.replace("/Mentor/Home/ManageStreams")
-				},
-				error: function () {
-					alert("Unable to save data");
-				},
-			});
-		});
-	});
-</script>
