--- a/iTrainee.MVC/Areas/Shared/Views/Topics/AddEditTopic.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Topics/AddEditTopic.cshtml
@@ -1,32 +1,37 @@
 ﻿@model iTrainee.Models.Topics
 @using Microsoft.AspNetCore.Mvc.Rendering;
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 <div class="row">
 	<div class="col-lg-12">
-		<form id="topicForm">
+@using (Html.BeginForm())
+{
 			    @Html.AntiForgeryToken()
+				@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 			<div class="form-group">
 				<label class="col-form-label">Streams</label><br />
 				@Html.DropDownListFor(model => model.StreamId, ViewBag.streamList as SelectList, "Select stream",  htmlAttributes: new { @class = "form-control"  })
 			</div>
 			<div class="form-group">
 				<div class="form-group">
-					<label class="col-form-label">Name</label>s
-					<input type="text" class="form-control" name="Name" value="@Model.Name" />
+					<label class="col-form-label">Name</label>
+					@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+					@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
 				</div>
 			</div>
 
 			<div class="form-group">
 				<div class="form-group">
-
 					<label class="col-form-label">Reference URL</label>
-					<input type="text" class="form-control" name="ReferenceURL" value="@Model.ReferenceURL" />
+					@Html.EditorFor(model => model.ReferenceURL, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+					@Html.ValidationMessageFor(model => model.ReferenceURL, "", new { @class = "text-danger" })
 				</div>
 			</div>
 			<div class="form-group mt-4 float-right">
-				<input id="btnTopicSave" type="submit" value="Save" class="btn btn-primary mr-3" />
+				<input type="submit" value="Save" class="btn btn-primary mr-3" />
 			</div>
-		</form>
+}
 	</div>
 </div>
 
@@ -37,26 +42,3 @@
 }
 }
 
-<script>
-
-
-		$(document).ready(function () {
-
-		$("#btnTopicSave").click(function () {
-
-			var updatedTopicData = $("#topicForm").serialize();
-			$.ajax({
-				type: "POST",
-				url: "/Shared/Topics/AddEditTopic",
-				data: updatedTopicData,
-				success: function () {
-					$("#topicModal").modal("hide");
-					window.location.replace("/Mentor/Home/ManageTopics")
-				},
-				error: function () {
-					alert("Unable to save data");
-				},
-			});
-		});
-	});
-</script>
